<resources>
    <string name="app_name">BMI</string>
    <string name="SelectHeight">Please select your height:</string>
    <string name="SelectWeight">Please select your weight:</string>
    <string name="StartHeight">0 cm</string>
    <string name="StartWeight">0 kg</string>
    <string name="Calculate">CALCULATE</string>
    <string name="CalculateBMI">CALCULATE\nYOUR BMI</string>
    <string name="Recalculate">RECALCULATE</string>
    <string name="EatMorePies">Eat more pies!</string>
    <string name="FitAsFiddle">Fit as a fiddle!</string>
    <string name="EatLessPies">Eat less pies!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Result">Your result </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>