<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/set_params_fragment_background"
    tools:context=".Fragments.SetParamsFragment">

    <TextView
        android:textColor="@android:color/background_dark"
        android:layout_marginTop="160dp"
        android:textSize="40sp"
        android:text="@string/CalculateBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginStart="10dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SelectHeight"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <TextView
        android:layout_gravity="center|end"
        android:id="@+id/setHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartHeight"
        tools:ignore="MissingConstraints" />

    <SeekBar
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        android:id="@+id/sliderHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SelectWeight"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:layout_marginTop="70dp"
        android:layout_gravity="center|end"
        android:id="@+id/setWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartWeight"
        tools:ignore="MissingConstraints" />

    <SeekBar
        android:layout_marginTop="105dp"
        android:layout_gravity="center"
        android:id="@+id/sliderWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:background="#1f1cc7"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Calculate"
        android:id="@+id/calculateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        />

</FrameLayout>