<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CBA"
    android:id="@+id/resultBackground"
    tools:context=".SetParamsFragment">

    <TextView
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Result" />

    <TextView
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_vertical"
        android:id="@+id/Result"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/StartWeight" />

    <TextView
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:layout_marginTop="120dp"
        android:layout_gravity="center_vertical"
        android:id="@+id/ResultInfo"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/Result" />


    <Button
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:background="#1f1cc7"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Recalculate"
        android:id="@+id/returnBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        />


</FrameLayout>